# rust-in-action-examples

./: README.md  grep-lite.md
ch1/: listing-1_7.rs
ch1/cereals/: Cargo.toml  main.rs  output.md
ch1/fruit/: output.md
ch1/letters/: output.md
ch1/race/: output.md
ch2/: grep-lite.md  ok.md
ch2/add-generic/: Cargo.toml
ch2/add-with-lifetimes/: Cargo.toml
ch2/bufreader-lines/: Cargo.toml
ch2/epsilon/: epsilon  epsilon.rs
ch2/expressions-return/: break.rs  ex1.rs  ex2.rs
ch2/grep-lite/: quote.txt
ch2/is_finite/: is_finite.rs
ch2/match-needles/: Cargo.toml
ch2/nan/: nan.rs
ch2/needle-in-haystack/: Cargo.toml
ch2/ref-deref/: ref
ch2/simple-with-enumerate/: Cargo.toml
ch2/simple-with-linenums/: Cargo.toml
ch2/str-simple-pattern/: Cargo.toml
ch2/type-conversion/: cast.rs  try_into.rs
ch2/while-true-incr-count/: Cargo.toml
ch3/: globalerror.md  newtype-pattern.md
ch3/defining-files-neatly/: Cargo.toml
ch3/file-doced/: Cargo.toml
ch3/file-states/: Cargo.toml
ch3/implementing-display/: Cargo.toml
ch3/mock-file/: Cargo.toml
ch3/parse-log/: Cargo.toml
ch3/public-file/: Cargo.toml
ch3/skeleton-read-trait/: Cargo.toml
ch4/: check-sats-2.md  copy_semantics.rs  move_semantics.md  move_semantics.rs  rc-refcell-groundstation.md
ch5/: bit-patterns.rs  copy-from-slice.md  copy-from-slice.rs  endianness.rs  f32-as-u32.rs  f32-exponent.rs  f32-mantissa.rs  f32-sign-bit.rs  impossible-addition.rs  int-vs-int.rs  parse-opcodes.rs  visualizing-f32.rs
ch6/: listing-6_3.md  listing-6_4.rs  listing-6_5.rs  listing-6_6.rs  password.md  password.rs  pointer-intro.rs
ch6/particles/: Cargo.toml  alloc.md  alloc.plot  alloc.tsv
ch6/particles/src/: main.rs
ch7/: basic_hash.rs  table-7_4-left.rs  voc.rs
ch7/actionkv/: Cargo.toml
ch7/actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
ch9/: clock.md
errata/: errata.md
(+105 files in other folders)
