[package]
name = "particles"
version = "0.1.0"
edition = "2021"

[dependencies]
# Provides vector mathematics, which is important to simulate movement.
piston2d-graphics = "0.39"
# Provides a wrapper around the core functionality of the piston game
# engine, letting us easily draw things onscreen; largely irrespective
# of the host environment.
piston_window = "0.117"
# Provides random number generators and associated functionality.
rand = "0.8"
